add TODOs and clearer README

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -5,12 +5,9 @@
     <h2>How to make it yours</h2>
     <ol class="center">
       <li>Install MongoDB, Express, Node.js and git on your machine</li>
-      <li>Open git shell or git bash</li>
       <li>Run "git clone https://github.com/NicolaFerracin/starter-boilerplate"</li>
-      <li>Start mongodb by typing "mongod" in the command line</li>
-      <li>Open another command line, navigate inside the main app folder and type "node server.js"</li>
-      <li>Wait to see the following in you command line "App listening on port 8080"</li>
-      <li>Open your browser and go <a href="http://localhost:8080">here</a> to see it live</li>
+      <li>Start the server with "node server.js" *TIP*: install nodemon to make the server restart automatically with any code change</li>
+      <li>Open your browser and go [here](http://localhost:8080) to see it live</li>
       <li>Edit the files, save, restart the server and make it yours!</li>
     </ol>
   </div>
