small README change

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -6,9 +6,10 @@
     <ol class="center">
       <li>Install MongoDB, Express, Node.js and git on your machine</li>
       <li>Run "git clone https://github.com/NicolaFerracin/starter-boilerplate"</li>
-      <li>Start the server with "node server.js" *TIP*: install nodemon to make the server restart automatically with any code change</li>
+      <li>Start the server with "node server.js"</li>
       <li>Open your browser and go [here](http://localhost:8080) to see it live</li>
       <li>Edit the files, save, restart the server and make it yours!</li>
     </ol>
+     *TIP*: install nodemon to make the server restart automatically with any code change
   </div>
 </header>
